# EZVN

./: .gitignore  CMakeLists.txt  EZVN.sln  EZVN.vcxproj  EZVN.vcxproj.filters  README.md
include/: audiomanager.h  background.h  backgroundmanager.h  button.h  character.h  character_definition.h  charactermanager.h  checkable.h  checkablegroup.h  checkbox.h  checkboxgroup.h  color.h  composite.h  composite_image.h  constants.h  dialoguemanager.h  displayable.h  drawable.h  duration.h  game.h  game_state.h  gamestate.h  history_menu.h  image.h  in_game.h  ingame.h  ingamestate.h  inputfield.h  main_menu.h  mainmenu.h  menu.h  menustate.h  music.h  musicmanager.h  pointer_event_data.h  pointereventdata.h  popupconfirmation.h  script.h  script_runner.h  scriptrunner.h  (+17 more)
include/Color/: color.h  conversion.h  str.h
include/GUI/: button.h  button_group.h  buttongroup.h  checkable.h  checkable_group.h  checkablegroup.h  checkbox.h  ui.h  (+18 more)
src/: audiomanager.cpp  background.cpp  backgroundmanager.cpp  button.cpp  character.cpp  character_definition.cpp  charactermanager.cpp  checkable.cpp  checkablegroup.cpp  checkbox.cpp  checkboxgroup.cpp  color.cpp  composite.cpp  composite_image.cpp  dialoguemanager.cpp  displayable.cpp  drawable.cpp  duration.cpp  game.cpp  game_state.cpp  gamestate.cpp  history_menu.cpp  image.cpp  in_game.cpp  ingame.cpp  ingamestate.cpp  inputfield.cpp  main.cpp  main_menu.cpp  mainmenu.cpp  menu.cpp  menustate.cpp  music.cpp  musicmanager.cpp  popupconfirmation.cpp  script.cpp  script_runner.cpp  scriptrunner.cpp  settings_menu.cpp  settingsmenu.cpp  (+15 more)
(+138 files in other folders)
